fix z-index on overlays

--- a/assets/css/grassplayer.scss
+++ b/assets/css/grassplayer.scss
@@ -49,6 +49,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 1;
 
     .overlay_osd {
       pointer-events: none;
